syntax = "proto2";

package CIM.Message;
import "CIM.Def.proto";
option java_package = "com.coffeechat.protobuf";
option go_package="grpc";
option optimize_for = LITE_RUNTIME;

// 发送消息
message CIMMsgData {
  // cmd id:		0x0301
  required uint64 from_user_id = 1; // 消息发送方
  required uint64 to_session_id = 2; // 消息接受方，单聊用户ID，群聊群ID
  required string msg_id = 3;        // 客户端消息ID，唯一（UUID）
  required uint64 create_time = 4;         // 消息创建时间戳(毫秒)
  required CIM.Def.CIMMsgType msg_type = 5; // 消息类型
  required bytes msg_data = 6;             // 消息内容
}

// 消息收到回复
message CIMMsgDataAck {
  // cmd id:		0x0302
  required uint64 from_user_id = 1;    // 消息发送方
  required uint64 to_session_id = 2; // 消息接受方，单聊用户ID，群聊群ID
  required string msg_id = 3;     // 客户端消息ID，唯一（UUID）
  required CIM.Def.CIMResCode res_code = 4;         // 错误码
  required CIM.Def.CIMSessionType session_type = 5; // 会话类型
  optional uint64 create_time = 6;                 // 创建时间戳(毫秒)
}

// 消息已读回复（我方）
message CIMMsgDataReadAck {
  // cmd id:		0x0303
  required uint64 user_id = 1; // 消息发送方
  required uint64 session_id = 2;
  required string msg_id = 3; // 消息ID，唯一（UUID）
  required CIM.Def.CIMSessionType session_type = 4;
}

// 已读消息通知（对方）
message CIMMsgDataReadNotify {
  // cmd id:		0x0304
  required uint64 user_id = 1; // 消息发送方
  required uint64 session_id = 2;
  required string msg_id = 3;
  required CIM.Def.CIMSessionType session_type = 4;
}

// 某个会话最新的消息ID请求
message CIMGetLatestMsgIdReq {
  // cmd id: 		0x030b
  required uint64 user_id = 1;
  required CIM.Def.CIMSessionType session_type = 2;
  required uint64 session_id = 3;
}

message CIMGetLatestMsgIdRsp {
  // cmd id:		0x030c
  required uint64 user_id = 1;
  required CIM.Def.CIMSessionType session_type = 2;
  required uint64 session_id = 3;
  required string latest_msg_id = 4; // 会话最新的消息ID（UUID）
}

// 批量查询消息详情请求(20条内)
message CIMGetMsgByIdReq {
  // cmd id: 		0x030d
  required uint64 user_id = 1;
  required CIM.Def.CIMSessionType session_type = 2;
  required uint64 session_id = 3;
  repeated string msg_id_list = 4; // 要查询消息详情的ID列表
}

message CIMGetMsgByIdRsp {
  // cmd id:		0x030e
  required uint64 user_id = 1;
  required CIM.Def.CIMSessionType session_type = 2;
  required uint64 session_id = 3;
  repeated CIM.Def.CIMMsgInfo msg_list = 4; // 消息详情列表
}