syntax = "proto3";

package CIM.Voip;
import "api/proto/cim_def.proto";
option java_package = "com.coffeechat.protobuf";
option go_package = "cim/pb";
option optimize_for = LITE_RUNTIME;

// 音视频呼叫邀请
message CIMVoipInviteReq {
  // cmd id:		0x0401
  uint64 creator_user_id = 1; // 邀请方
  repeated uint64 invite_user_list = 2; // 被邀请方列表，如果是一对一，无需设置
  CIMVoipInviteType invite_type = 3; // 通话类型
  CIMChannelInfo channel_info = 4; // 频道信息，由服务端分配
}

// 音视频呼叫应答状态
message CIMVoipInviteReply {
  // cmd id:		0x0402
  uint64 user_id = 1; // 应答用户，如果是0且rsp_code=100，代表系统应答
  CIMInviteRspCode rsp_code = 2;   // 当前状态
  CIMChannelInfo channel_info = 3; // 频道信息，由服务端分配
}

// 音视频呼叫ACK
// 100 Trying->180 Ringing->200 Ok->ACK(this message)
message CIMVoipInviteReplyAck {
  CIMChannelInfo channel_info = 1; // 频道信息，由服务端分配
}

// 心跳
message CIMVoipHeartbeat {}

// 挂断请求
message CIMVoipByeReq {
  uint64 local_call_time_len = 1;          // 本地通话时长计数
  uint64 user_id = 2;                      // 挂断方用户ID
  CIMChannelInfo channel_info = 3; // 频道信息
  CIMVoipByeReason bye_reason = 4; // 挂断原因
}

// 挂断响应
message CIMVoipByeRsp {
  CIMErrorCode error_code = 1; // 结果
}

// 挂断通知
message CIMVoipByeNotify {
  uint64 user_id = 1;                      // 挂断方用户ID
  CIMChannelInfo channel_info = 2; // 频道信息
  CIMVoipByeReason byeReason = 3;  // 挂断原因
}